# gdb_presentation

./: .gitignore  .pre-commit-config.yaml  README.org  index.html  presentation.html  presentation.org
css/: beamer_like_blocks.css  code_blocks.css  my_remark_main.css  presentation.css
exemplos/: CMakeLists.txt  CMakePresets.json  conanfile.txt
exemplos/python/: array_from_vector.py
exemplos/src/: .clang-format  breakpoint_commands.cpp  print_armadillo.cpp  print_arrays.cpp  random_points.cpp  structured_array.cpp
